# UnitTestDemo

./: CMakeLists.txt
cmake/: Coverage.cmake  Valgrind.cmake
src/: CMakeLists.txt  calc.cpp  calc.h  main.cpp  rng.h  rng_mt19937.cpp  rng_mt19937.h  run.cpp
test/: CMakeLists.txt  calc_test.cpp  run_test.cpp
test/mocks/: rng_mock.h
